<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherTesting"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/other_testing_time"
        android:src="@drawable/other_time"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="-100dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/timeRisk"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/time_great"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:id="@+id/timeTitleResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/other_testing_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/titleColor"
                    android:textSize="18sp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>

                <TextView
                    android:id="@+id/timeTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/other_testing_time_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"/>

                <Button
                    android:id="@+id/emergencyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/emergency_call_button_good"
                    android:textColor="#ffff"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/other_testing_time_emergency"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="18sp"
                    android:onClick="callEmergency"
                    android:layout_marginBottom="40dp"
                    />

                <TextView
                    android:id="@+id/timeTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:gravity="start"
                    android:text="@string/other_testing_time_location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"/>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/timeMapView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>